[package]
name = "aya-rustc-llvm-proxy"
version = "0.3.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
description = "Dynamically proxy LLVM calls into Rust own shared library"
license = "MIT"
keywords = ["llvm"]
categories = ["development-tools::build-utils", "external-ffi-bindings"]
repository = "https://github.com/aya-rs/rustc-llvm-proxy"
readme = "README.md"
edition = "2018"

[dependencies]
libloading = "0.5"
lazy_static = "1.0"
failure = "0.1"
libc = "0.2"
llvm-sys = { version = "120", features = ["no-llvm-linking", "disable-alltargets-init"] }

[build-dependencies]
cargo_metadata = "0.8"
failure = "0.1"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
